# dockerfiles

./: README.md
NOT_READY/: README.md
NOT_READY/acme/: Dockerfile  domains  renew-certificates  run.sh
NOT_READY/alltube/: Dockerfile  config.yml  index2.php  run.sh
NOT_READY/freshrss/: Dockerfile  README.md  run.sh
NOT_READY/git/: Dockerfile  cgitrc  gitweb.conf
NOT_READY/glances/: Dockerfile  glances.conf  run.sh
NOT_READY/kanboard/: Dockerfile
NOT_READY/keeweb/: Dockerfile  run.sh  server.sh
NOT_READY/lutim/: Dockerfile  README.md  lutim.conf  run.sh
NOT_READY/nginx-php/: Dockerfile  README.md  run.sh
NOT_READY/nginx-proxy/: Dockerfile  genProxyConfig.py  getLastStartEvent.py  run.sh  watchContainers
NOT_READY/prosody/: Dockerfile  run.sh  (+2 more)
alltube/: Dockerfile  README.md  config.yml  run.sh  update_ytdl.sh
cryptpad/: Dockerfile  README.md  config.js  run.sh
etherpad/: Dockerfile
firefox_syncserver/: Dockerfile  README.md  run.sh
freshrss/: Dockerfile  run.sh
hastebin/: Dockerfile  README.md  run.sh
kanboard/: Dockerfile  run.sh
lutim/: Dockerfile  README.md  run.sh
nginx-php/: Dockerfile  README.md  run.sh
privatebin/: Dockerfile  README.md
radicale/: Dockerfile  radicale.ini
samba/: Dockerfile  README.md  run.sh
searx/: Dockerfile  README.md  run.sh
send/: Dockerfile  README.md  config.js  geodb.patch  run.sh
syncserver/: Dockerfile  README.md  run.sh
syncthing/: Dockerfile  run.sh
unstable/: README.md
unstable/rftg/: Dockerfile  Makefile.am  configure.ac
wallabag/: Dockerfile  README.md  parameters.yml  run.sh
(+170 files in other folders)
